# llm-training-estimator

./: .gitignore  .gitmodules  README.md  README.zh-CN.md  config.local.example.yaml  package-lock.json  pyproject.toml  requirements-dev.txt
configs/: example_moe_full.yaml  example_qwen_7b_zero3.yaml  hardware_prices.yaml
docs/: yaml_schema.md
src/llm_training_estimator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/training_estimator/: cli.py  config_loader.py  cost.py  coverage.py  llm_summary.py  pipeline.py  report.py  schema.py  web_api.py
src/training_estimator/adapters/: gpu_mem_adapter.py  llm_analysis_adapter.py
web/: package-lock.json  package.json
web/src/pages/: index.astro
web/src/styles/: global.css
